testsuite/tests/grammar/invalid_list/test.out
== invalid_astlist.lkt ==
invalid_astlist.lkt:7:7: error: ASTList expects one type argument: the list element type
7 |       ASTList[FooNode, Example, Example]+(Example("example"))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== invalid_element_type.lkt ==
invalid_element_type.lkt:9:9: error: Invalid list type for List parser: sub-parser produces Num nodes while ASTList[Example] accepts only Example nodes
9 |         ASTList[Example]*(num)
  |         ^^^^^^^^^^^^^^^^^^^^^^


== invalid_list_cls.lkt ==
invalid_list_cls.lkt:6:29: error: no entity called 'NoSuchGeneric' in scope for unit invalid_list_cls.lkt
6 |     @main_rule main_rule <- NoSuchGeneric[Example]+(Example("example"))
  |                             ^^^^^^^^^^^^^


== non_list_cls.lkt ==
non_list_cls.lkt:7:29: error: Invalid list type for List parser: ListNode. Not a list type
7 |     @main_rule main_rule <- ListNode+(num)
  |                             ^^^^^^^^^^^^^^


== token_element.lkt ==
token_element.lkt:6:38: error: List parsers only accept subparsers that yield AST nodes (Token provided here)
6 |     @main_rule main_rule <- ListNode(list+(@Number))
  |                                      ^^^^^^^^^^^^^^


lkt_compile: Done
